# pg_facets

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile.postgres  Licence.md  META.json  Makefile  README.md  TESTING_GUIDE.md  USAGE.md  build.zig  package.json  pg_facets.control  run_all_tests.sh  run_zig_tests.sh
data/: 01_basic_queries.sql  02_intermediate_queries.sql  03_advanced_queries.sql  04_faceting_setup.sql  05_faceting_queries.sql  facets_setup.sql  import.sh
doc/: API_REFERENCE.md  BM25_INDEXING_REVIEW.md  BM25_SEARCH_GUIDE.md  CHUNK_BITS_PERFORMANCE_IMPACT.md  DOCUMENTATION.md
docker/: Dockerfile  Dockerfile.ha  Dockerfile.ha.vendored  Dockerfile.test  Dockerfile.vendored  docker-compose.ha.vendored.yml  docker-compose.ha.yml  docker-compose.test.yml  docker-compose.vendored.yml  docker-compose.yml  run_quick_tests.sh  run_tests.sh  run_tests_existing.sh  run_tests_simple.sh
docs/: SECURITY_AUDIT_PROMPT.md
examples/: 04_faceting_setup.sql  06_bm25_setup.sql  README.md  bm25_setup.md  golang_schemas.go
examples/rust/: Cargo.toml  Makefile  README.md  run_tests.sh
examples/rust/src/: client.rs  lib.rs
examples/rust/tests/: integration_tests.rs
scripts/: security_scan.sh
sql/: pg_facets--0.3.10--0.4.0.sql  pg_facets--0.3.5.sql  pg_facets--0.3.6--0.3.8.sql  pg_facets--0.3.6.sql  pg_facets--0.3.8--0.3.9.sql  pg_facets--0.3.8.sql  pg_facets--0.3.9--0.3.10.sql  pg_facets--0.3.9.sql  pg_facets--0.4.0--0.4.1.sql  pg_facets--0.4.0.sql  pg_facets--0.4.1--0.4.2.sql  pg_facets--0.4.1.sql  pg_facets--0.4.2--0.4.3.sql  pg_facets--0.4.2.sql  (+1 more)
(+98 files in other folders)
